Popravio link za diskord

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://www.tiktok.com/@roleplayalfa" class="hbtn hb-fill-middle">TIKTOK KANAL</a>
           </div>
           <div class="footer-right">
-            <a href="https://discord.com/invite/Su5hQWhh" class="hbtn hb-fill-middle">JOINAJ DISCORD</a>
+            <a href="https://discord.gg/SxtCYWbJjA" class="hbtn hb-fill-middle">JOINAJ DISCORD</a>
           </div>
         </div>
       </header>
