--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <footer class="footer">
         <div class="footer-container">
-          <div class="footer-center">
+          <div class="footer-right">
             <p>Alfa Roleplay- All rights reserved 2022-2023</p>
           </div>
           <div class="footer-right">
